<resources>
    <string name="app_name">MovieApplicationDatabase</string>
    <string name="button_api_main">API</string>
    <string name="tv_title_main">Title</string>
    <string name="tie_movieid_main">Movie ID</string>
    <string name="test">Movie ID Tidak Dapat Ditemukan!</string>
    <string name="overview_card_now_playing">Overview</string>
    <string name="title_card_now_playing">Title</string>
    <string name="poster_card_now_playing">Poster Card Now Playing</string>
    <string name="release_date_card_now_playing">Release</string>
    <string name="genre_card_now_playing">Genre</string>
    <string name="rating_card_now_playing">Rating</string>
    <string name="details_movie_details">Details</string>
    <string name="tv_duration_movie_details">Duration</string>
    <string name="tv_rating_movie_details">Rating</string>
    <string name="iv_poster_movie_details">Poster</string>
    <string name="tv_synopsis_movie_details">Synopsis</string>
    <string name="iv_back_movie_details">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_fragment_upcoming">Upcoming</string>
    <string name="tv_fragment_now_playing">Now Playing</string>
    <string name="tv_title_fragment_movie_details">Ava</string>
    <string name="tv_tagline_fragment_movie_details">Kill. Or be killed.</string>
    <string name="tv_year_fragment_movie_details">2020</string>
    <string name="tv_runtime_fragment_movie_details">1h 1m</string>
    <string name="tv_rating_fragment_movie_details">10/10</string>
    <string name="tv_genre_fragment_movie_details">Adventure</string>
    <string name="tv_synopsis_fragment_movie_details">Synopsis</string>
    <string name="tv_production_companies_fragment_movie_details">Production Companies</string>
    <string name="tv_card_credits_name">Name</string>
    <string name="tv_cast_fragment_movie_details">Cast</string>
</resources>