<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_card_up_coming"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_card_up_coming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#0DFDFEFE"
        app:cardCornerRadius="16dp"
        app:circularflow_radiusInDP="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cv_constraint_card_up_coming"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_card_up_coming"
                android:layout_width="wrap_content"
                android:layout_height="128dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/poster_card_now_playing"
                app:circularflow_radiusInDP="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Corner" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_card_up_coming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/title_card_now_playing"
                android:textColor="#FDFEFE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_card_up_coming"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_genre_card_up_coming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato"
                android:text="@string/genre_card_now_playing"
                android:textColor="#B6B6B6"
                app:layout_constraintEnd_toEndOf="@+id/tv_title_card_up_coming"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_title_card_up_coming"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_card_up_coming" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_rating_card_up_coming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_text_view_backround"
                android:drawableStart="@drawable/rating_color"
                android:drawablePadding="5dp"
                android:drawingCacheQuality="high"
                android:fontFamily="@font/lato_bold"
                android:padding="8dp"
                android:text="@string/rating_card_now_playing"
                android:textAlignment="textStart"
                android:textColor="#B6B6B6"
                android:textDirection="firstStrongRtl"
                app:layout_constraintStart_toStartOf="@+id/tv_genre_card_up_coming"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre_card_up_coming" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_releasedate_card_up_coming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_text_view_backround"
                android:fontFamily="@font/lato_bold"
                android:padding="8dp"
                android:text="@string/release_date_card_now_playing"
                android:textAlignment="center"
                android:textColor="#B6B6B6"
                app:layout_constraintStart_toEndOf="@+id/tv_rating_card_up_coming"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre_card_up_coming" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>